--- a/project/templates/player.html
+++ b/project/templates/player.html
@@ -129,9 +129,7 @@
   <div id="overlay-now"></div>
   <div id="overlay-next"> Next: </div>
   <div id="overlay-queued"></div>
-  <div id="overlay-qrcode">
-    <img id="qrCode" src="data:image/png;base64,{{ base64_img }}">
-  </div>
+  <img id="qrCode" src="data:image/png;base64,{{ base64_img }}" width="128" height="128">
 
   <script>
     const video = document.getElementById("video");
