--- a/project/templates/player.html
+++ b/project/templates/player.html
@@ -129,8 +129,9 @@
   <div id="overlay-now"></div>
   <div id="overlay-next"> Next: </div>
   <div id="overlay-queued"></div>
-  <img id="qrCode" src="data:image/png;base64,{{ base64_img }}" width="128" height="128">
-
+  <img id="signup-qrcode" src="data:image/png;base64,{{ signup_img }}" width="128" height="128">
+  <img id="login-qrcode" src="data:image/png;base64,{{ login_img }}" width="128" height="128">
+  
   <script>
     const video = document.getElementById("video");
 
