--- a/project/templates/room.html
+++ b/project/templates/room.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-{% if current_user.roomadm == "X" %}
+
 <div class="container mt-3">
     {% with messages = get_flashed_messages() %}
     {% if messages %}
@@ -15,40 +15,41 @@
     </h3>
 </div>
 <br>
+{% if current_user.roomadm == "X" %}
 <div class="container mt-3">
     <h3 class="fa fa-align-center" aria-hidden="true">Player Controls</h3>
-    <div class="row">
-        <div class="col-3">
-            <a href="{{ url_for('main.setcommand', command='prev') }}">
-                <img src="{{ url_for('static', filename='images/icon-previous.png') }}" height="48" width="48">
-            </a>
-        </div>
-        <div class="col-3">
-            <a href="{{ url_for('main.setcommand', command='play') }}">
-                <img src="{{ url_for('static', filename='images/icon-play.png') }}" height="48" width="48">
-            </a>
-        </div>
-        <div class="col-3">
-            <a href="{{ url_for('main.setcommand', command='pause') }}">
-                <img src="{{ url_for('static', filename='images/icon-pause.png') }}" height="48" width="48">
-            </a>
-        </div>
-        <div class="col-3">
-            <a href="{{ url_for('main.setcommand', command='next') }}">
-                <img src="{{ url_for('static', filename='images/icon-next.png') }}" height="48" width="48">
-            </a>
-        </div>
-        <div class="row">
-            <div class="col-2">
-                <img src="{{ url_for('static', filename='images/icon-volumedown.png') }}" height="48" width="48">
-            </div>
-            <div class="col-8">
-                <input type="range" id="volume-control" min="0" max="1" step="0.01" value="1">
-            </div>
-            <div class="col-2">
-                <img src="{{ url_for('static', filename='images/icon-volumeup.png') }}" height="48" width="48">
-            </div>
-        </div>
+    <div class="input-group">
+        <form method="POST" action="{{ url_for('main.setcommand', command='prev') }}">
+            <button type="submit" class="btn btn-primary">
+                <img src="{{ url_for('static', filename='images/icon-previous.png') }}" alt="Button image" height="48"
+                    width="48">
+            </button>
+        </form>&nbsp;&nbsp;
+        <form method="POST" action="{{ url_for('main.setcommand', command='play') }}">
+            <button type="submit" class="btn btn-primary">
+                <img src="{{ url_for('static', filename='images/icon-play.png') }}" alt="Button image" height="48"
+                    width="48">
+            </button>
+        </form>&nbsp;&nbsp;
+        <form method="POST" action="{{ url_for('main.setcommand', command='pause') }}">
+            <button type="submit" class="btn btn-primary">
+                <img src="{{ url_for('static', filename='images/icon-pause.png') }}" alt="Button image" height="48"
+                    width="48">
+            </button>
+        </form>&nbsp;&nbsp;
+        <form method="POST" action="{{ url_for('main.setcommand', command='next') }}">
+            <button type="submit" class="btn btn-primary">
+                <img src="{{ url_for('static', filename='images/icon-next.png') }}" alt="Button image" height="48"
+                    width="48">
+            </button>
+        </form>
+    </div>
+    <br>
+    <div class="input-group">
+        <button type="button" class="btn btn-primary">
+            <img src="{{ url_for('static', filename='images/icon-volumedown.png') }}" height="48" width="48">
+        </button>&nbsp;&nbsp;
+        <input type="range" id="volume-control" min="0" max="1" step="0.01" value="1">
     </div>
 </div>
 <script>
