--- a/project/templates/configuration.html
+++ b/project/templates/configuration.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container mt-3">
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <div class="alert {{ messages[1] }}">
-        {{ messages[0] }}
-    </div>
-    {% endif %}
-    {% endwith %}
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<div class="alert {{ messages[1] }}">
+    {{ messages[0] }}
+</div>
+{% endif %}
+{% endwith %}
+<div class="container border border-primary" >
+    <br>
     <form action="{{ url_for('main.configuration') }}" method="POST">
         <div class="input-group">
             <label for="lastfm">LAST.FM API Key:&nbsp;&nbsp;</label>
@@ -32,6 +33,7 @@
         <br>
         <button class="btn btn-outline-primary">Update</button>
     </form>
+    <br>
 </div>
 <br>
 <div class="container mt-3">
