--- a/project/templates/room.html
+++ b/project/templates/room.html
@@ -14,12 +14,14 @@
 <br>
 <div class="container mt-3">
     <h3 class="title">
-        <p class="text-primary">Control Room: {{ current_user.roomid }}</p>
+        <p class="text-primary">Room: {{ current_user.roomid }}</p>
     </h3>
 </div>
 <br>
-<div class="container mt-3">
+<div class="container border border-primary">
+    <br>
     <h3 class="fa fa-align-center" aria-hidden="true">Player Controls</h3>
+    <br>
     <div class="input-group">
         <form method="POST" action="{{ url_for('main.setcommand', command='prev') }}">
             <button type="submit" class="btn btn-primary">
@@ -53,6 +55,7 @@
         </button>&nbsp;&nbsp;
         <input type="range" id="volume-control" min="0" max="1" step="0.01" value="1">
     </div>
+    <br>
 </div>
 <script>
     const rangeElement = document.getElementById('volume-control');
