--- a/project/templates/create_room.html
+++ b/project/templates/create_room.html
@@ -13,7 +13,7 @@
     <form method="POST" action="{{ url_for('main.createroom') }}">
         <div class="mb-3 mt-3">
             <label for="userid">Administrator:</label>
-            <input list="userid" name="userid" required>
+            <input list="userid" name="userid" autocomplete="off" required>
             <datalist id="userid">
                 {% for user in users %}
                 <option value="{{ user.id }}">{{ user.name }}</option>
