--- a/project/templates/room.html
+++ b/project/templates/room.html
@@ -6,7 +6,7 @@
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     <div class="alert {{ messages[1] }}">
-        {{ messages[0] }}.
+        {{ messages[0] }}
     </div>
     {% endif %}
     {% endwith %}
@@ -59,22 +59,44 @@
 </div>
 <br>
 <div class="container border border-primary">
-    <h3 class="title">
-        <p class="text-primary">Administrators</p>
-    </h3>
-    <form method="POST" action="{{ url_for('main.addroomadm') }}">
-        <div class="mb-3 mt-3">
-            <label for="userid">Administrator:</label>
-            <input list="userid" name="userid" required>
+    <h3 class="fa fa-align-center" aria-hidden="true">Administrators</h3>
+    <table class="table">
+        <thead>
+            <tr>
+                <td></td>
+                <td>Nome</td>
+            </tr>
+        </thead>
+        <tbody>
+            {% for roomadmin in roomadms %}
+            <tr>
+                <td>
+                    <a class="clickable-image" id="{{ roomadmin.id }}"
+                        href="{{ url_for('main.delroomadm', userid=roomadmin.id) }}">
+                        <img src="{{ url_for('static', filename='images/icon-delete.png') }}" height="24" width="24">
+                    </a>
+                </td>
+                <td>
+                    {{ roomadmin.name }}
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <form method="POST" action="/addroomadm">
+        <div class="input-group">
+            <input list="userid" name="userid" id="useridInput" autocomplete="off" required>
             <datalist id="userid">
                 {% for user in users %}
+                {% if user.roomadm != "X" %}
                 <option value="{{ user.id }}">{{ user.name }}</option>
+                {% endif %}
                 {% endfor %}
             </datalist>
+            <button type="submit" class="btn btn-outline-primary">Add</button>
         </div>
-        <button type="submit" class="btn btn-outline-primary">Add Admin</button>
     </form>
-
+    <br>
 </div>
 <script>
     const rangeElement = document.getElementById('volume-control');
@@ -91,6 +113,7 @@
         } catch (error) {
         }
     });
+
 </script>
 {% endif %}
 {% endblock %}
