--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -25,6 +25,30 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-3 text-white">
+                    <label for="name">Name:</label>
+                </div>
+                <div class="col-9 text-white">
+                    <input type="text" class="form-control" id="name" name="name" value="{{ current_user.name }}" required>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3 text-white">
+                    <label for="password">Password:</label>
+                </div>
+                <div class="col-9 text-white">
+                    <input type="password" class="form-control" id="password" name="password">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3 text-white">
+                    <label for="repass">Re-type Password:</label>
+                </div>
+                <div class="col-9 text-white">
+                    <input type="password" class="form-control" id="repass" name="repass">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3 text-white">
                     <label for="room_selection">Room:</label>
                 </div>
                 <div class="col-3 text-white">
@@ -36,24 +60,6 @@
                 </div>
                 <div class="col-6 text-white">
                     <p>* Regular users must scan qrcode in karatube screen to change room</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-3 text-white">
-                    <label for="password">Password:</label>
-                </div>
-                <div class="col-9 text-white">
-                    <input type="password" class="form-control" id="password" name="password">
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-3 text-white">
-                    <label for="repass">Re-type Password:</label>
-                </div>
-                <div class="col-9 text-white">
-                    <input type="password" class="form-control" id="repass" name="repass">
                 </div>
             </div>
         </div>
