--- a/project/templates/configuration.html
+++ b/project/templates/configuration.html
@@ -12,7 +12,6 @@
 {% endwith %}
 <div class="container border border-primary">
     <h3 class="fa fa-align-center" aria-hidden="true">Settings</h3>
-    <br>
     <form action="{{ url_for('main.configuration') }}" method="POST">
         <div class="input-group">
             <label for="lastfm">LAST.FM API Key:&nbsp;&nbsp;</label>
@@ -20,19 +19,16 @@
             <a href="https://www.last.fm/login?next=%2Fapi%2Faccounts%3F_pjax%3D%2523content">&nbsp;&nbsp;Get API
                 Key</a>
         </div>
-        <br>
         <div class="input-group">
             <label for="updateratio">Screen update sec:&nbsp;&nbsp;</label>
             <input type="number" class="form-control" id="updateratio" name="updateratio" min="1" max="10"
                 value="{{ config.updateratio }}" required>
         </div>
-        <br>
         <div class="input-group">
             <label for="songint">Song Interval:&nbsp;&nbsp;</label>
             <input type="number" class="form-control" id="songint" name="songint" min="1" max="60"
                 value="{{ config.songint }}" required>
         </div>
-        <br>
         <button class="btn btn-outline-primary">Update</button>
     </form>
     <br>
@@ -71,5 +67,21 @@
     </form>
     <br>
 </div>
-
+<br>
+<div class="container border border-primary">
+    <h3 class="fa fa-align-center" aria-hidden="true">User</h3>
+    <form method="POST" action="{{ url_for('main.updateuser') }}">
+        <div class="input-group">
+            <input list="updateuser" name="updateuser" autocomplete="off" placeholder="Room" required>
+            <datalist id="updateuser">
+                {% for user in users %}
+                <option value="{{ user.id }}">{{ user.name }}</option>
+                {% endfor %}
+            </datalist>&nbsp;&nbsp;
+            <button type="submit" class="btn btn-outline-primary">Reset</button>&nbsp;&nbsp;
+            <button type="submit" class="btn btn-outline-danger">Delete</button>
+        </div>
+    </form>
+    <br>
+</div>
 {% endblock %}
