--- a/project/templates/configuration.html
+++ b/project/templates/configuration.html
@@ -78,6 +78,7 @@
                 <option value="{{ user.id }}">{{ user.name }}</option>
                 {% endfor %}
             </datalist>&nbsp;&nbsp;
+            <button type="submit" class="btn btn-outline-primary">Admin</button>&nbsp;&nbsp;
             <button type="submit" class="btn btn-outline-primary">Reset</button>&nbsp;&nbsp;
             <button type="submit" class="btn btn-outline-danger">Delete</button>
         </div>
