--- a/project/templates/configuration.html
+++ b/project/templates/configuration.html
@@ -72,15 +72,15 @@
     <h3 class="fa fa-align-center" aria-hidden="true">User</h3>
     <form method="POST" action="{{ url_for('main.updateuser') }}">
         <div class="input-group">
-            <input list="updateuser" name="updateuser" autocomplete="off" placeholder="Room" required>
-            <datalist id="updateuser">
+            <input list="updateuserid" name="updateuserid" autocomplete="off" placeholder="Room" required>
+            <datalist id="updateuserid">
                 {% for user in users %}
                 <option value="{{ user.id }}">{{ user.name }}</option>
                 {% endfor %}
             </datalist>&nbsp;&nbsp;
-            <button type="submit" class="btn btn-outline-primary">Admin</button>&nbsp;&nbsp;
-            <button type="submit" class="btn btn-outline-primary">Reset</button>&nbsp;&nbsp;
-            <button type="submit" class="btn btn-outline-danger">Delete</button>
+            <input type="submit" class="btn btn-outline-primary" name="action" value="Admin">&nbsp;&nbsp;
+            <input type="submit" class="btn btn-outline-primary" name="action" value="Reset">&nbsp;&nbsp;
+            <input type="submit" class="btn btn-outline-danger" name="action" value="Delete">
         </div>
     </form>
     <br>
