--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -28,6 +28,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('auth.signup') }}">Sigup</a>
+                    </li>
                     {% endif %}
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
