--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -69,7 +69,7 @@
             {% if messages %}
             <br>
             <div class="alert {{ messages[1] }}">
-                {{ messages[0] }}.
+                {{ messages[0] }}
             </div>
             <br>
             {% endif %}
