--- a/project/templates/musics.html
+++ b/project/templates/musics.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="container mt-3">
-    <form action="/library" method="POST">
+    <form action="/musics" method="POST">
         <div class="input-group">
             <label for="user_selection">Singer:&nbsp;&nbsp;</label>
             <select name="user_selection" id="user_selection">
