--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -35,7 +35,7 @@
                     {% endif %}
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.library') }}">Library</a>
+                        <a class="nav-link" href="{{ url_for('main.musics') }}">Musics</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.queue') }}">Queue</a>
