--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="{{ url_for('main.roomcontrol') }}">Room</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.player') }}">Player</a>
+                        <a class="nav-link" href="{{ url_for('main.player') }}" target="_blank">Player</a>
                     </li> {% endif %}
                     {% if current_user.admin == 'X' %}
                     <li class="nav-item">
